// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for code_suggestions_users_count metric will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "subtitle": "Last 30 days",
        "tooltip": {
          "description": "Number of users who used Code Suggestions. %{linkStart}Learn more%{linkEnd}.",
          "descriptionLink": "/help/user/project/repository/code_suggestions/_index#use-code-suggestions",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for duo_agent_platform_agent_flows_users_count metric will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "subtitle": "Last 30 days",
        "tooltip": {
          "description": "Number of users who used at least one GitLab Duo agent or flow.",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for duo_agent_platform_chats metric will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "subtitle": "Last 30 days",
        "tooltip": {
          "description": "Number of chat sessions in Duo Agent Platform. %{linkStart}Learn more%{linkEnd}.",
          "descriptionLink": "/help/user/gitlab_duo_chat/agentic_chat",
        },
      },
    },
  ],
]
`;

exports[`AI Impact Over Time Data Source fetch setVisualizationOverrides callback for duo_used_count metric will call the setVisualizationOverrides callback with the correct settings 1`] = `
[
  [
    {
      "visualizationOptionOverrides": {
        "subtitle": "Last 30 days",
        "tooltip": {
          "description": "Number of users who used at least one GitLab Duo or GitLab Duo Agent Platform feature.",
        },
      },
    },
  ],
]
`;
